Hicieron cambios en kts de Maps, Main, Login y el xml Strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">U2FirebaseOrlandoRuiz</string>
+    <string name="app_name">SenderismoApp</string>
     <string name="title_activity_maps">MapsActivity</string>
 </resources>
